force-app/main/default/objects/vlocity_cmt__MediaConfiguration__c/vlocity_cmt__MediaConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom Setting for Media Products</description>
    <label>Media Configuration</label>
</CustomObject>