force-app/main/default/objects/vlocity_cmt__MediaConfiguration__c/fields/vlocity_cmt__Decimal_Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Decimal_Value__c</fullName>
    <label>Decimal Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>