force-app/main/default/objects/vlocity_cmt__MediaConfiguration__c/fields/vlocity_cmt__Description__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Description__c</fullName>
    <description>Description of the feature/setting</description>
    <label>Description</label>
    <length>100</length>
    <type>Text</type>
</CustomField>