force-app/main/default/objects/vlocity_cmt__MediaConfiguration__c/fields/vlocity_cmt__Setup_Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Setup_Value__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to specify if setting is enabled/disabled</description>
    <label>Setup Value</label>
    <type>Checkbox</type>
</CustomField>