force-app/main/default/objects/vlocity_cmt__MediaConfiguration__c/fields/vlocity_cmt__Text_Value__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Text_Value__c</fullName>
    <description>Text Value</description>
    <label>Text Value</label>
    <length>100</length>
    <type>Text</type>
</CustomField>